--- a/css/chart2.css
+++ b/css/chart2.css
@@ -1,20 +1,13 @@
-.column-chart,
-.bar-chart {
+.column-chart {
   position: relative;
-  /* min-width: 100px;
-  min-height: 100px; */
-  /* padding: 0;
-  margin: 0; */
 }
-.column-chart .chart-column,
-.bar-chart .chart-row,
-/* .column-chart [data-cp-size],
-.bar-chart [data-cp-size], */
-.plot-container > * > * {
+.chart-column,
+.plot-container {
   list-style: none;
-  border: 1px solid #ffffff;
+  border: 5px solid #000;
 }
-.column-chart .plot-container {
+
+.plot-container {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
@@ -31,13 +24,15 @@
   margin: 0;
   min-height: 100px;
 }
-.column-chart.stacked > * > * {
-  height: 100%;
-  -webkit-transform: scaleY(-1);
-  -moz-transform: scaleY(-1);
-  -o-transform: scaleY(-1);
-  -ms-transform: scaleY(-1);
-  transform: scaleY(-1);
+
+.plot-container li { 
+  transition: width 2s, opacity 1s;
+}
+
+.plot-container li:hover { 
+  opacity: 0.8; 
+  width: 60px;
+
 }
 
 .column-chart .chart-column {
@@ -46,38 +41,19 @@
   -webkit-align-self: flex-end;
   align-self: flex-end;
 }
-.column-chart .chart-column,
-.bar-chart .chart-row,
-.bar-chart {
-  background: #3498db;
+
+.column-chart .chart-column {
+  background: #38596f;
   color: #ffffff;
   box-sizing: border-box;
 }
+/* 
 .bar-chart {
   clear: both;
-}
+} */
 .bar-chart .plot-container {
   flex-direction: column;
   padding: 0;
   margin: 0;
   width: 100%;
 }
-/* .bar-chart .chart-row,
-.bar-chart [data-cp-size] {
-  min-height: 8px;
-} */
-/* .bar-chart.stacked > * > * {
-  display: flex;
-} */
-/* .bar-chart.stacked .group-by-number [data-cp-size] {
-  display: inline-block;
-} */
-/* .scatter-plot .plot-container {
-  position: absolute;
-  top: 12px;
-  left: 0;
-  right: 12px;
-  bottom: 0;
-  margin: 0;
-  padding: 0;
-} */
