--- a/css/site.css
+++ b/css/site.css
@@ -1,46 +1,59 @@
-
-body {
-  font: 13px/1.3 'Lucida Grande',sans-serif;
-  color: #666;
-}
-
-.chart {
-  display: table;
-  table-layout: fixed;
-  width: 90%;
-  /* max-width: 700px; */
-  height: 90%;
-  /* background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1) 2%, rgba(0, 0, 0, 0) 2%); */
-  background-size: 100% 50px;
-  background-position: left top;
-}
-.chart li {
+.column-chart {
   position: relative;
-  display: table-cell;
-  vertical-align: bottom;
-  height: 200px;
 }
-.chart div {
-  margin: 0 1em;
-  display: block;
-  background: rgba(34, 51, 60, 0.75);
-  animation: draw 1s ease-in-out;
+.chart-column,
+.plot-container {
+  list-style: none;
+  border: 5px solid #000;
 }
-.chart div:before {
+
+.plot-container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 100%;
-  padding: 5px 1em 0;
-  display: block;
   text-align: center;
-  content: attr(title);
-  word-wrap: break-word;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  min-height: 100px;
 }
 
-@keyframes draw {
-  0% {
-    height: 0;
-  }
+.plot-container li { 
+  transition: width 2s, opacity 1s;
 }
 
+.plot-container li:hover { 
+  opacity: 0.8; 
+  width: 60px;
+
+}
+
+.column-chart .chart-column {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+  -webkit-align-self: flex-end;
+  align-self: flex-end;
+}
+
+.column-chart .chart-column {
+  background: #38596f;
+  color: #ffffff;
+  box-sizing: border-box;
+}
+/* 
+.bar-chart {
+  clear: both;
+} */
+.bar-chart .plot-container {
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
